gnupg-pkcs11-scd
Copyright (c) 2006-2007 Zeljko Vrba <zvrba@globalnet.hr>
Copyright (c) 2006-2019 Alon Bar-Lev <alon.barlev@gmail.com>

????-??-?? - Version 0.9.3

 * Ignore unsupported public keys, thanks to Manon Goo.
 * Support PKAUTH command, thanks Mateusz Gozdek

2019-01-05 - Version 0.9.2

 * Fix Windows build issues, thanks Luka Logar.
 * Use pin-cache configuration, thanks Luka Logar.
 * Support openssl-1.1, thanks Thorsten Alteholz, W. Michael Petullo.

2017-09-26 - Version 0.9.1

 * Support unix domain socket credentials on FreeBSD.
 * Introduce GNUPG_PKCS11_SOCKETDIR to instruct where sockets are created.
 * Make proxy systemd service work again per change of systemd behavior.

2017-08-25 - Version 0.9.0

 * Avoid dup of stdin/stdout so that the terminate assuan hack operational
   again.
 * Introduce gnupg-pkcs11-scd-proxy to allow isolation of the PKCS#11
   provider.
 * Lots of cleanups.

2017-07-15 - Version 0.8.0

 * Support multiple tokens via serial numbers by hashing token id into
   serial number.
   Implementation changes the card serial number yet again, executing
   gpg --card-status should resync.

2017-04-18 - Version 0.7.6

 * Add --homedir parameter.
 * Rework serial responses for gnupg-2.1.19.

2017-03-01 - Version 0.7.5

 * Fix issue with decrypting padded data, thanks to smunaut.
 * Catchup with gnupg-2.1 changes which caused inability to support
   both gpg and gpgsm. Implementation had to change card serial
   number, as a result current keys of gpg will look for the
   previous serial card.
   emulate-openpgpg option is obsoleted and removed.

   ACTION REQUIRED
   in order to assign new card serial number to existing keys.
   backup your ~/.gnupg.
   delete all PKCS#11 secret keys using:
       gpg --delete-secret-keys $KEY then
   Then refresh keys using:
       gpg --card-edit
   In <gnupg-2.1.19 the keys should be re-generated using:
       admin
       generate
   Do not replace keys!